--- a/project_backend/package.json
+++ b/project_backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "customer_backend",
+  "name": "project_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "frontend": "npm start --prefix ../customer_frontend",
+    "frontend": "npm start --prefix ../project_frontend",
     "start": "nodemon server.js",
     "dev": "concurrently \"npm run start\" \"npm run frontend\""
   },
