--- a/project_frontend/package.json
+++ b/project_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customer_frontend",
+  "name": "project_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-toastify": "^8.0.2",
     "web-vitals": "^1.1.2"
   },
