--- a/project_frontend/package.json
+++ b/project_frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.0.2",
